--- a/scss/_resets.scss
+++ b/scss/_resets.scss
@@ -4,7 +4,4 @@
     padding: 0;
 }
 
-html {
-    height: 100%;
-}
 
